--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -22,11 +19,14 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background-home{
+  position: absolute;
+  left: 0em;
+  right: 0em;
+  bottom: 0em;
+  top:0em;
+  margin: auto;
+  width: 100%;
+  z-index: -1;
+
 }
