--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,12 @@ body {
 .name-title{
   position: relative;
   display: grid;
-  top: 15em;
+  top: 20em;
 }
 
 .front {
     padding: 60px;
-    height: 700px;
+    height: 100vh;
 }
 
 
