--- a/src/App.css
+++ b/src/App.css
@@ -15,16 +15,17 @@ body {
 .name-title{
   position: relative;
   display: grid;
-  top: 20em;
+  top: 50em;
 }
 
 .front {
     padding: 60px;
-    height: 100vh;
+    height: 80vh;
 }
 
 
 nav{ 
+  z-index: 1;
   position: fixed;
   transition: all 0.5s ease;
   transform: translateY(-80px);
